feat(error): add table for logging errors (#8)
