# swagger.json
@@ -190,6 +190,57 @@
           }
         }
       }
+    },
+    "/{address}/queryKnownABI": {
+      "put": {
+        "description": "Queries `view function` of known contracts",
+        "parameters": [
+          {
+            "name": "address",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Address of the contract"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/QueryContractResponse"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/QueryContractResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/QueryContractKnownABIRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/QueryContractKnownABIRequest"
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -249,6 +300,36 @@
         "required": [
           "function",
           "abi"
+        ]
+      },
+      "QueryContractKnownABIRequest": {
+        "type": "object",
+        "properties": {
+          "function": {
+            "type": "string",
+            "description": "Name of the function to call",
+            "example": "balanceOf"
+          },
+          "params": {
+            "type": "object",
+            "description": "Neccesary parameters for the function",
+            "example": {
+              "balanceOf": "0x0"
+            }
+          },
+          "blockTag": {
+            "type": "number",
+            "description": "BlockTag number for when to query the function",
+            "example": 4312
+          },
+          "blockDate": {
+            "type": "string",
+            "description": "Date for when to query the function",
+            "example": "2023-09-01T15:03:23"
+          }
+        },
+        "required": [
+          "function"
         ]
       },
       "HumanReadableAbi": {
